syntax = "proto3";

package message;

// import "google/protobuf/timestamp.proto";

option go_package = "./pb/message";

service MessageService {
  rpc MessageReceived(ReceiveMessageRequest) returns (ReceiveMessageResponse);
  rpc ReplyReceived(ReceiveReplyRequest) returns (ReceiveReplyResponse);
}


message ReceiveMessageRequest {
  string originClientID = 1;
  string client_id = 2;
  string instance_id = 3;
  Message message = 4;

  message Message {
    string channel_id = 1;
    int64 message_id = 2;
    string content = 3;
    string user_id = 4;
    string username = 5;
    string created_at = 6;
  }
}

message ReceiveMessageResponse {
}

message ReceiveReplyRequest {
  string originClientID = 1;
  string client_id = 2;
  string instance_id = 3;
  Reply reply = 4;
  message Reply {
    string channel_id = 1;
    int64 message_id = 2;
    int64 reply_id = 3;
    string content = 4;
    string user_id = 5;
    string username = 6;
    string created_at = 7;
  }
}
  
message ReceiveReplyResponse {
}

